# primeFluX.ai

./: .gitignore  AGORA_ECOSYSTEM_IMPLEMENTATION_SUMMARY.md  AGORA_LOGIN_GUIDE.md  AI_COLLABORATION_GUIDE.md  ALL_PATCHES_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_LLM_STRATEGY.md  ApoptosisAI_Cumulative_Math_Applications_v1.0.xlsx  Apoptosis_Cumulative_Workbook_v1.xlsx  Apoptosis_PrimeFlux_CalculationProof.xlsx  COGNITIVE_ENGINE_PATCH_SUMMARY.md  COMBINATORIC_INTERPRETER_STATUS.md  CRITICAL_WARNINGS.md  DIAGNOSTIC_REPORT.md  DUAL_RISK_ARCHITECTURE.md  Dockerfile  ECOSYSTEM_ARCHITECTURE.md  ECOSYSTEM_CAPSULE.json  FINAL_PATCHES_APPLIED.md  FINAL_STATUS.md  FIRST_SHELL_INTEGRATION.md  FLUXAI_REFINEMENT_ROADMAP.md  GET_APOP_RUNNING.sh  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPORT_FIX.md  LICENSE  LLM_BRIDGE_PATCH_SUMMARY.md  LLM_SERVER_SETUP.md  MEASUREMENT_ERROR_DUALITY.md  ONTOLOGY.md  PATCH_001_SUMMARY.md  PATCH_007C_APPLICATION.md  PATCH_008A_VALIDATION.md  PATCH_008_ASCII_FLUX_COMPLETE.md  PATCH_011_SUMMARY.md  PHASE1_PATCH2_OPERATOR_CORE_SUMMARY.md  PRESENCE_MVP_SUMMARY.md  PRIMEFLUX_AI_ALIGNMENT.md  PRIMEFLUX_PROOFS_ROADMAP.md  (+48 more)
agents/: __init__.py  router.py
api/: __init__.py  agent_creation_api.py  apop_llm_server.py  bridge_upgrade_notes.md  fastapi_interface.py  llm_bridge_config.json  message_api.py  quanta_api.py  remote_llm_bridge.py  state_export_api.py  streamlit_ui.py  user_interface.py  workflow_api.py
archive/: local_boot.py  runtime_boot.py
cognitive/: __init__.py  concept_lattice.py  embeddings.py  engine.py  flux_reinforcement.py  identity_regulator.py  oscillation.py
combinatoric/: __init__.py  interpreter.py
core/: __init__.py  agora_sync.py  ascii_flux.py  capsule_validator.py  distinction_packet.py  first_shell.py  flux.py  icm.py  lcm.py  numpy_fallback.py  pf_core.py  prime_ascii.py  quanta.py  quanta_api.py  reversibility_check.py  shell_integration.py  shells.py  triplets.py
docs/: ARCHIVE_PLAN.md  QUANTACOIN.md  SETUP.md  math_validation.tex
examples/: README.md  construct_capsule.py  daily_workflow.py  full_pf_cycle.py  llm_integration.py  mesh_demo.py  process_capsule.py  simulate_network.py  test_experience_merge.py  test_quanta.py  test_state_merge.py  validate_safety.py
experience/: __init__.py  agora_ledger.py  experience_layer.py  flux_divergence_risk.py  ledger.py  manager.py
experience_log/: memory_20251207.jsonl  memory_20251207_141757.jsonl  memory_full.jsonl
fluxai/: __init__.py
(+193 files in other folders)
